--- a/index.html
+++ b/index.html
@@ -395,9 +395,11 @@
                     <div class="col-md-12 portfolio-filter text-center">
                         <ul>
                             <li class="active" data-filter="*">All</li>
-                            <li data-filter=".brand">Brand</li>
-                            <li data-filter=".design">Design</li>
-                            <li data-filter=".graphic">Graphic</li>
+                            <li data-filter=".banner">Banner</li>
+                            <li data-filter=".brochure">Brochure</li>
+                            <li data-filter=".logo">Logo</li>
+                            <li data-filter=".card">Card</li>
+                            <li data-filter=".others">Others</li>
                         </ul>
                     </div>
                 </div>
@@ -405,148 +407,262 @@
                 <!--Portfolio Items-->
                 <div class="row portfolio-items mb-50">
 
-                    <!--Portfolio Item-->
-                    <div class="item col-lg-4 col-sm-6 brand graphic">
-                        <a class="image-link" href="img/portfolio/img-1.jpg">
+
+
+
+
+                    <div class="item col-lg-4 col-sm-6 banner">
+                        <a class="image-link" href="img/portfolio/Banner/banner%20(1).jpg">
                             <figure>
-                                <img src="img/portfolio/img-1.jpg" alt="">
+                                <img src="img/portfolio/Banner/banner%20(1).jpg" alt="">
                                 <figcaption>
-                                    <h4>Book Design</h4>
-                                    <p>Graphic</p>
+                                    <h4>Banner Design</h4>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="item col-lg-4 col-sm-6 banner">
+                        <a class="image-link" href="img/portfolio/Banner/banner%20(1).png">
+                            <figure>
+                                <img src="img/portfolio/Banner/banner%20(1).png" alt="">
+                                <figcaption>
+                                    <h4>Banner Design</h4>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="item col-lg-4 col-sm-6 banner">
+                        <a class="image-link" href="img/portfolio/Banner/banner%20(2).png">
+                            <figure>
+                                <img src="img/portfolio/Banner/banner%20(2).png" alt="">
+                                <figcaption>
+                                    <h4>Banner Design</h4>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
 
-                    <!--Portfolio Item-->
-                    <div class="item col-lg-4 col-sm-6 design">
-                        <a class="ajax-link" href="single-work.html">
+
+
+                    <div class="item col-lg-4 col-sm-6 brochure">
+                        <a class="image-link" href="img/portfolio/Brochure/mockup.jpg">
                             <figure>
-                                <img src="img/portfolio/img-2.jpg" alt="">
+                                <img src="img/portfolio/Brochure/mockup.jpg" alt="">
                                 <figcaption>
-                                    <h4>Notepad Design</h4>
-                                    <p>Design</p>
+                                    <h4>Brochure Mockup Design</h4>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
 
-                    <!--Portfolio Item-->
-                    <div class="item col-lg-4 col-sm-6 design graphic">
-                        <a class="video-link" href="https://www.youtube.com/watch?v=k_okcNVZqqI">
+
+                    <div class="item col-lg-4 col-sm-6 brochure">
+                        <a class="image-link" href="img/portfolio/Brochure/withoutMockup.jpg">
                             <figure>
-                                <img src="img/portfolio/img-3.jpg" alt="">
+                                <img src="img/portfolio/Brochure/withoutMockup.jpg" alt="">
                                 <figcaption>
-                                    <h4>Creative Cup</h4>
-                                    <p>Graphic</p>
+                                    <h4>Brochure Design</h4>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
 
-                    <!--Portfolio Item-->
-                    <div class="item col-lg-4 col-sm-6 design">
-                        <a class="image-link" href="img/portfolio/img-4.jpg">
+
+                    <div class="item col-lg-4 col-sm-6 logo">
+                        <a class="image-link" href="img/portfolio/Logo/Logo%20(1).jpg">
                             <figure>
-                                <img src="img/portfolio/img-4.jpg" alt="">
+                                <img src="img/portfolio/Logo/Logo%20(1).jpg" alt="">
                                 <figcaption>
-                                    <h4>Business Card</h4>
-                                    <p>Design</p>
+                                    <h4>Logo Design</h4>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
 
-                    <!--Portfolio Item-->
-                    <div class="item col-lg-4 col-sm-6 brand">
-                        <a class="ajax-link" href="single-work.html">
+
+                    <div class="item col-lg-4 col-sm-6 logo">
+                        <a class="image-link" href="img/portfolio/Logo/Logo%20(1).png">
                             <figure>
-                                <img src="img/portfolio/img-5.jpg" alt="">
+                                <img src="img/portfolio/Logo/Logo%20(1).png" alt="">
                                 <figcaption>
-                                    <h4>Back Pack</h4>
-                                    <p>Brand</p>
+                                    <h4>Logo Design</h4>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
 
-                    <!--Portfolio Item-->
-                    <div class="item col-lg-4 col-sm-6 design">
-                        <a class="ajax-link" href="single-work.html">
+
+                    <div class="item col-lg-4 col-sm-6 logo">
+                        <a class="image-link" href="img/portfolio/Logo/Logo%20(2).png">
                             <figure>
-                                <img src="img/portfolio/img-6.jpg" alt="">
+                                <img src="img/portfolio/Logo/Logo%20(2).png" alt="">
                                 <figcaption>
-                                    <h4>Door Hangar</h4>
-                                    <p>Design</p>
+                                    <h4>Logo Design</h4>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
 
-                    <!--Portfolio Item-->
-                    <div class="item col-lg-4 col-sm-6 graphic">
-                        <a class="image-link" href="img/portfolio/img-7.jpg">
+                    <div class="item col-lg-4 col-sm-6 logo">
+                        <a class="image-link" href="img/portfolio/Logo/Logo%20(3).png">
                             <figure>
-                                <img src="img/portfolio/img-7.jpg" alt="">
+                                <img src="img/portfolio/Logo/Logo%20(3).png" alt="">
                                 <figcaption>
-                                    <h4>Notepad Design</h4>
-                                    <p>graphic</p>
+                                    <h4>Logo Design</h4>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
 
-                    <!--Portfolio Item-->
-                    <div class="item col-lg-4 col-sm-6 brand">
-                        <a class="image-link" href="img/portfolio/img-8.jpg">
+
+
+                    <div class="item col-lg-4 col-sm-6 logo">
+                        <a class="image-link" href="img/portfolio/Logo/Logo%20(4).png">
                             <figure>
-                                <img src="img/portfolio/img-8.jpg" alt="">
+                                <img src="img/portfolio/Logo/Logo%20(4).png" alt="">
                                 <figcaption>
-                                    <h4>Creative Flyer</h4>
-                                    <p>Brand</p>
+                                    <h4>Logo Design</h4>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
 
-                    <!--Portfolio Item-->
-                    <div class="item col-lg-4 col-sm-6 brand">
-                        <a class="video-link" href="https://www.youtube.com/watch?v=k_okcNVZqqI">
+
+                    <div class="item col-lg-4 col-sm-6 logo">
+                        <a class="image-link" href="img/portfolio/Logo/Logo%20(5).png">
                             <figure>
-                                <img src="img/portfolio/img-9.jpg" alt="">
+                                <img src="img/portfolio/Logo/Logo%20(5).png" alt="">
                                 <figcaption>
-                                    <h4>Mobile App</h4>
-                                    <p>Brand</p>
+                                    <h4>Logo Design</h4>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
 
-                    <!--Portfolio Item-->
-                    <div class="item col-lg-4 col-sm-6 graphic">
-                        <a class="image-link" href="img/portfolio/img-10.jpg">
+
+
+
+
+
+                    <!--Card-->
+                    <div class="item col-lg-4 col-sm-6 card">
+                        <a class="image-link" href="img/portfolio/Card/Card%20(1).jpg">
                             <figure>
-                                <img src="img/portfolio/img-10.jpg" alt="">
+                                <img src="img/portfolio/Card/Card%20(1).jpg" alt="">
                                 <figcaption>
-                                    <h4>Cup Design</h4>
-                                    <p>Graphic</p>
+                                    <h4>Card Design</h4>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="item col-lg-4 col-sm-6 card">
+                        <a class="image-link" href="img/portfolio/Card/Card%20(2).jpg">
+                            <figure>
+                                <img src="img/portfolio/Card/Card%20(2).jpg" alt="">
+                                <figcaption>
+                                    <h4>Card Design</h4>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
 
-                    <!--Portfolio Item-->
-                    <div class="item col-lg-4 col-sm-6 brand graphic">
-                        <a class="ajax-link" href="single-work.html">
+                    <div class="item col-lg-4 col-sm-6 card">
+                        <a class="image-link" href="img/portfolio/Card/Card%20(3).jpg">
                             <figure>
-                                <img src="img/portfolio/img-11.jpg" alt="">
+                                <img src="img/portfolio/Card/Card%20(3).jpg" alt="">
                                 <figcaption>
-                                    <h4>Creative Box</h4>
-                                    <p>brand</p>
+                                    <h4>Card Design</h4>
                                 </figcaption>
                             </figure>
                         </a>
                     </div>
+
+
+
+                    <div class="item col-lg-4 col-sm-6 others">
+                        <a class="image-link" href="img/portfolio/Others/others%20(1).gif">
+                            <figure>
+                                <img src="img/portfolio/Others/others%20(1).gif" alt="">
+                                <figcaption>
+                                    <h4>Others Design</h4>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+
+
+
+
+                    <div class="item col-lg-4 col-sm-6 others">
+                        <a class="image-link" href="img/portfolio/Others/others%20(1).jpg">
+                            <figure>
+                                <img src="img/portfolio/Others/others%20(1).jpg" alt="">
+                                <figcaption>
+                                    <h4>Others Design</h4>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+
+
+
+                    <div class="item col-lg-4 col-sm-6 others">
+                        <a class="image-link" href="img/portfolio/Others/others%20(1).png">
+                            <figure>
+                                <img src="img/portfolio/Others/others%20(1).png" alt="">
+                                <figcaption>
+                                    <h4>Others Design</h4>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+
+
+                    <div class="item col-lg-4 col-sm-6 others">
+                        <a class="image-link" href="img/portfolio/Others/others%20(2).jpg">
+                            <figure>
+                                <img src="img/portfolio/Others/others%20(2).jpg" alt="">
+                                <figcaption>
+                                    <h4>Others Design</h4>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+
+
+                    <div class="item col-lg-4 col-sm-6 others">
+                        <a class="image-link" href="img/portfolio/Others/others%20(3).jpg">
+                            <figure>
+                                <img src="img/portfolio/Others/others%20(3).jpg" alt="">
+                                <figcaption>
+                                    <h4>Others Design</h4>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+
+                    <div class="item col-lg-4 col-sm-6 others">
+                        <a class="image-link" href="img/portfolio/Others/others%20(4).jpg">
+                            <figure>
+                                <img src="img/portfolio/Others/others%20(4).jpg" alt="">
+                                <figcaption>
+                                    <h4>Others Design</h4>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="item col-lg-4 col-sm-6 others">
+                        <a class="image-link" href="img/portfolio/Others/others%20(5).jpg">
+                            <figure>
+                                <img src="img/portfolio/Others/others%20(5).jpg" alt="">
+                                <figcaption>
+                                    <h4>Others Design</h4>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+
+
 
                 </div>
             </div>
@@ -643,7 +759,7 @@
 
                 </div>
             </div>
-       
+
             <!--Google Map End-->
         </section>
         <!--Contact Section End-->
